@@ -10,6 +10,7 @@ version 0.84.05
 	bulb_mode setting reading for K-70, K-50
 	better handling of unknown and n/a settings
 	K-x settings parser (very simple)
+	Checking both both /dev/block and /dev
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
 	about/version code cleanup
